--- a/linux-rt-bfq-dev/PKGBUILD
+++ b/linux-rt-bfq-dev/PKGBUILD
@@ -54,7 +54,7 @@ _rtpatchver=rt${_rtver}
 pkgver=${_major}.${_minor}.${_rtpatchver}
 _pkgver=${_major}.${_minor}
 _srcname=linux-${_pkgver}
-pkgrel=11
+pkgrel=12
 pkgdesc='Linux RT-BFQ-dev'
 arch=('x86_64')
 url="https://github.com/sirlucjan/bfq-mq-lucjan"
@@ -86,8 +86,11 @@ source=("https://www.kernel.org/pub/linux/kernel/v5.x/${_srcname}.tar.xz"
         #"${_lucjanpath}/${_bfq_rev_path}/${_bfq_rev_patch}"
         "${_lucjanpath}/${_bfq_path}/${_bfq_patch}"
         "${_lucjanpath}/${_gcc_path}/${_gcc_patch}"
-        "${_lucjanpath}/arch-patches-v7-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
-        "${_lucjanpath}/arch-patches-v7-sep/0002-iommu-amd-Don-t-initialise-remapping-irqdomain-if-IO.patch"
+        "${_lucjanpath}/arch-patches-v8-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
+        "${_lucjanpath}/arch-patches-v8-sep/0002-iommu-amd-Don-t-initialise-remapping-irqdomain-if-IO.patch"
+        "${_lucjanpath}/arch-patches-v8-sep/0003-drm-i915-ilk-glk-Fix-link-training-on-links-with-LTT.patch"
+        "${_lucjanpath}/arch-patches-v8-sep/0004-drm-i915-dp-Prevent-setting-the-LTTPR-LT-mode-if-no-.patch"
+        "${_lucjanpath}/arch-patches-v8-sep/0005-drm-i915-Disable-LTTPR-support-when-the-DPCD-rev-1.4.patch"
          # the main kernel config files
         'config')
 
@@ -348,8 +351,11 @@ sha512sums=('69bf72b99b0ef55cb9cd8c37bc9670e0dc7d97ab1f5b9f7edd2c161e8489d3aac43
             'SKIP'
             '64a5b940cac72be8fc50c3feb93550e1da140df4708fe70da15a39c304021707d5638be6b75c7077a2ca56637025dfed50f00919972eafd270be59ba6c079312'
             '08ba50a763f71267215ebf00f136edf68c63aa8afa362c30d6b06fbf38d5cd03c4300165eebb9db9571e7c47150eaa6efbbb7a7f53053b05570cb11f3b4a8303'
-            '0ea8a8671e4172e0c2b3eb02b7c783c9957b39dc835711deef4521da4a40b398f2a2a77fdd1efacd7c5412611d90f08606dbc556e6048644b19319f8bb2eff11'
-            'e63ed24cfd80e566ff98e5861b982bca07adee1b15ce40f31d5144f61e87c06583b86b8f9ea9953ba2b9d2802d26a1e2cc9e11717c5287094f5d3aee51da55d5'
+            '0efb27e7f3849e2a4f0501ea2dad3bc56db4365a17ca09bf7f976aa4145deb182cb75eb261ce3bd231e4c196e8633708e3ba336806cdeb02cb2b0427a9dba8e7'
+            'a5456a89cd965050e45872d64ad7b14b236fc22869b980b3c172432d37485d0118f056193dd60051b120d0d0f5b3c6a87c0b90dbd6283f30465579e496416650'
+            'cf003e5c16662d20fcf18a87b4df7a2fbad489a1db559bab4bd47bedac5c6793c138f48994bf8d5fe7d4c58d3c8c98aa6f5ab08022ce7fa082c85e29c96aa78a'
+            '4c38622d2e6a5ca8aad508e0d203f255ae1fd0b209efa1a46ddb159c3b023ea5e72da702cbbed51377eb313f7f6912c5f0e654d489ef843925f7bafe93d1c357'
+            '4fd25872016fc0d9ef1c27c640146f4403a6f3500de325d33eb4b55285174355a83a4845b0bd971cb0ff149939b326880bfb211cd8395ac868749f7b5dbb2d0d'
             '105c632754bf9a8cffd3c90680d5d1eac4e597746df442df65033d1598d57ec250ce95637908e1e7af9fe6a46d5c0515494893678808a8247b9320f3f9a4fe77')
 
 validpgpkeys=(
